--- a/Express_online_shop_mongoose/views/admin/edit-product.ejs
+++ b/Express_online_shop_mongoose/views/admin/edit-product.ejs
@@ -8,6 +8,7 @@
 
     <main>
         <form class="product-form" action="<%if(editing){%>/admin/edit-product<%}else{%>/admin/add-product<%}%>" method="POST">
+            <input type="hidden" name="_csrf" value="<%=csrfToken%>">
             <div class="form-control">
                 <label for="title">Title</label>
                 <input type="text" name="title" id="title" value="<%=product.title%>">
