--- a/Express_online_shop_mongoose/views/shop/cart.ejs
+++ b/Express_online_shop_mongoose/views/shop/cart.ejs
@@ -14,6 +14,7 @@
                                 <%=item.productId.title%> (
                                 <%=item.quantity%>)
                                 <form action="/cart-delete-item" method="POST">
+                                        <input type="hidden" name="_csrf" value="<%=csrfToken%>">
                                         <input type="hidden" value="<%=item.productId._id%>" name="productId" />
                                         <input type="hidden" value="<%=item.productId.price%>" name="price" />
                                         <button class="btn" type="submit">Delete</button>
@@ -23,6 +24,7 @@
                 <%})%>
                 <p>
                         <form action="/create-order" method="POST">
+                                <input type="hidden" name="_csrf" value="<%=csrfToken%>">
                                 <button class="btn" type="submit">Place Order</button>
                         </form>
                 </p>
